--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,13 +6,26 @@
     <title>Alinhamento vetical</title>
     <style>
         #container {
-            height: 500px;
+            background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
+            position: relative;
+            height: 96vh;
+            padding: 10px;
             background-color: blueviolet;
 
         }
         #conteudo {
+            background-image: url(imagens/nick-andreka-KhzWmn9gno0-unsplash.jpg);
+            background-size: 100% 100%;
+            position: absolute;
             height: 200px;
+            width: 400px;
             background-color: yellow;
+
+            left: 50%;
+            top: 50%;
+
+            transform: translate(-5%, -50%);
 
         }
     </style>
