--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,18 +11,15 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         td {
             border: 1px solid black;
             padding: 8px;
-            background-color: aqua;
-        }
-        td:hover {
-            text-decoration: solid;
-            background-color: rgba(255, 238, 0, 0.527);
-        }
-        
+            text-align: center; /*Alinhamento horizontal*/
+            vertical-align: top; /*Alinhamento vertical*/
+        }    
     </style>
 </head>
 <body>
