--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -19,6 +19,16 @@
         </p>
 
         <p>
+            <label for="ihora">Hora da prova</label>
+            <input type="time" name="hora" id="ihora">
+        </p>
+
+        <p>
+            <label for="idia">Dia da Prova</label>
+            <input type="date" name="dia" id="idia">
+        </p>
+
+        <p>
             <label for="imes">Periodo Letivo</label>
             <input type="month" name="mes" id="imes" value="1997-03">
         </p>
